@@ -1,4 +1,4 @@
 DIST kstart-3.10.tar.gz 123477 RMD160 92cf78288fade9a6d7d407989d41be641619ce3d SHA1 15584458988b37aa1719b83a9ba80434858fe4be SHA256 120320685f67776f823830c93a154a5960209f2e09f55e0519debcd18e89ffea
-EBUILD openafs-kstart-3.10.ebuild 900 RMD160 70c03cfa2b0f2920fc6818f754a57b12dbdfd31c SHA1 1794adb900cdfe9406cc46e61f7636d4b129aa7d SHA256 8354e1d269fcb69f772b7c83c6137633ce307a5bf774f2f0732b7cdb24bd260f
-MISC ChangeLog 343 RMD160 ca40a31ee25dca25d35d8bbce7a9a45304d99878 SHA1 330526ec517957d2b36db17d0c8cabc2a755e824 SHA256 1fbf06419f4a2f6d60849b09d511d14d8c187f02d5af553e988c6597639627e6
+EBUILD openafs-kstart-3.10.ebuild 875 RMD160 7e9e7750a8627a90ce11d1c386a36b947616f9e2 SHA1 d8e985ffedb6118d10bc5c61fe2d3ab067805529 SHA256 43c58d534d21787ffd5a396e0a4cdf0858a5fecf47e6e8414372db3d40f22a5a
+MISC ChangeLog 546 RMD160 04ace13d0bd8994352a2f28c20ad10bd6b368572 SHA1 e83e9c92f875ce77bba98f989b17c48ce0424041 SHA256 18678848551326f14a8642b3742ece035abde61c7eee6e82bd4b8807d85d7b1a
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
